fix: tests * docs: add enchantments list link